# LiteBroker

./: .gitconfig  .gitmodules  CMakeLists.txt
.github/workflows/: cmake-multi-platform.yml
app/: CMakeLists.txt  main.cpp
brokerLib/: CMakeLists.txt  brokerLib.cpp
brokerLib/include/: brokerLib.h
cmake/: get_dependecies.cmake
liteBroker/: .gitignore  CMakeLists.txt  broker.cpp  broker.cpp.orig  create_task.sql  schema.sql  task_set_status.sql
liteBroker/include/: broker.h
litebroker/: .gitignore  CMakeLists.txt  broker.cpp  receive_tasks.sql  schema.sql
litebroker/include/: litebroker.h
tools/: CMakeLists.txt
